fixed image alignment issues

--- a/src/output.css
+++ b/src/output.css
@@ -648,6 +648,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.-mt-14 {
+  margin-top: -3.5rem;
+}
+
 .block {
   display: block;
 }
@@ -682,6 +686,10 @@ video {
   width: 66.666667%;
 }
 
+.w-4\/12 {
+  width: 33.333333%;
+}
+
 .max-w-\[800px\] {
   max-width: 800px;
 }
@@ -696,6 +704,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -866,6 +878,10 @@ video {
     margin-bottom: 0px;
   }
 
+  .md\:-mt-14 {
+    margin-top: -3.5rem;
+  }
+
   .md\:inline {
     display: inline;
   }
@@ -882,6 +898,10 @@ video {
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .md\:w-4\/12 {
+    width: 33.333333%;
   }
 
   .md\:px-20 {
